--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ nav{
 
 }
 .logo{
+   
    width: 140px;
    cursor: pointer;
 }
@@ -72,7 +73,7 @@ nav{
    background: transparent;
 }
 .search-bar form button{
-background: #ff5361;
+background: #ff9900;
 width: 55px;
 height: 55px;
 border-radius: 50%;
@@ -131,6 +132,7 @@ cursor: pointer;
 .trending div img{
    width: 100%;
    border-radius: 10px;
+   height: 80%;
 
 }
 .trending h3{
@@ -159,7 +161,7 @@ margin-top: 10px;
    margin: 10px 0;
 }
 .cta-btn{
-   background: #ff5361;
+   background: #ff9900;
    color: #fff;
    text-decoration: none;
    padding: 12px 30px;
@@ -176,8 +178,11 @@ margin-top: 10px;
    margin-bottom: 30px;
 }
 .stories div img{
+  
    width: 100%;
    border-radius: 10px;
+   height: 100%;
+   
 }
 .stories div{
    position: relative;
@@ -192,11 +197,11 @@ margin-top: 10px;
    transform: translate(-50%, -50%);
    color: #fff;
    font-size: 26px;
-   font-weight: 600;
+   font-weight: 500;
 }
 .start-btn{
    text-decoration: none;
-   background: #ff5361;
+   background: #ff9900;
    color: #fff;
    width: 80%;
    max-width: 350px;
@@ -270,6 +275,7 @@ nav .fa-bars{
       position: fixed;
       top: 4%;
       left: 7%;
+      margin-top: -25px;
    }
    nav{
       position: fixed;
@@ -368,23 +374,26 @@ nav .fa-bars{
 }
 
 
+
+
 /*next page*/
 .navbar-white{
    background: #fff;
    box-shadow: 0 5px 10px  rgba(0,0,0,0.05);
 
 }
+
 .navbar-white .nav-links li a{
    color: #000;
 }
 .navbar-white .register-btn{
-   background: #ff5361;
+   background: #ff9900;
 }
 nav.navbar-white .fa-bars{
    color: #000;
 }
 .navbar-white .active::after{
-   background-color: #ff5361;
+   background-color: #ff9900;
 }
 
 .list-container{
@@ -408,4 +417,334 @@ nav.navbar-white .fa-bars{
 }
 .house{
    display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
+   padding: 30px 0;
+   border-top: 1px solid #ccc;
+}
+.house-img{
+   flex-basis: 40%;
+}
+.house-info{
+   flex-basis: 58%;
+   color: #555;
+}
+.house-img img{
+   width: 100%;
+   border-radius: 12px;
+}
+.house-info h3{
+   font-weight: 600px;
+   color: #333;
+   font-size: 22px;
+   margin: 4px 0;
+}
+.house-info i {
+   color: #ff9900;
+   font-size: 18px;
+   margin: 10px 1px;
+}
+.house-price{
+   text-align: right;
+}
+.house-price h4{
+   font-size: 20px;
+}
+.house-price h4 span{
+   font-size: 16px;
+   font-weight: 500px;
+}
+.sidebar{
+   border: 1px solid #999;
+   padding: 20px 30px;
+   margin-top: 30px;
+}
+.sidebar h2{
+   font-weight: 500;
+}
+.filter{
+   display: flex;
+   align-items: center;
+   color: #555;
+   margin-bottom: 10px;
+}
+.filter p{
+   flex: 1;
+}
+.filter input{
+   margin-right: 15px;
+   cursor: pointer;
+}
+.sidebar-link{
+   text-align: right;
+   margin: 20px 0;
+}
+.sidebar-link a{
+   text-decoration: none;
+}
+.pageination{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin: 20px 0;
+}
+.pageination img{
+   width: 15px;
+   margin: 10px 20px;
+
+}
+.right-arrow{
+   transform: rotate(180deg);
+}
+.pageination span{
+   margin: 10px 8px;
+   width: 40px;
+   height: 40px;
+   line-height: 40px;
+   text-align: center;
+   border-radius: 50%;
+   cursor: pointer;
+}
+.pageination .current{
+   background: #333;
+   color: #fff;
+}
+
+/* next small page */
+@media only screen and  (max-width: 700px){
+   .list-container{
+      margin-top: 150px;
+   }
+   .left-col, .right-col,.house-img, .house-info {
+      flex-basis: 100%;
+   }
+   .left-col h1{
+      font-size: 33px;
+   }
+   .house-info h3{
+      font-size: 18px;
+   }
+   .house-info i{
+      font-style: 16px;
+   }
+   .pageination span{
+   margin: 10px 2px;
+   width: 30px;
+   height: 30px;
+   line-height: 30px;
+   font-size: 12px;
+}
+.navbar-white .logo{
+   width: 20%;
+   margin-top: -25px;
+}
+}
+
+/*tide house*/
+.house-details{
+   padding: 0 12%;
+
+}
+.house-title{
+   margin-top: 50px;
+}
+.house-title h1{
+   font-weight: 600;
+}
+.house-title .row{
+   display: flex;
+   flex-wrap: wrap;
+   align-items: center;
+   margin: 10px 0;
+}
+.house-title span{
+   margin: 0 20px;
+}
+.house-title i{
+   color: #ff9900;
+   font-size: 14px;
+}
+.gallery{
+   display: grid;
+   grid-gap: 10px;
+   grid-template-areas: 'first first . .' 'first first . .';
+   margin: 20px 0;
+
+
+}
+.gallery div img{
+   width: 100%;
+   display: block;
+   border-radius: 10px;
+}
+.gallery-img-1{
+   grid-area: first;
+}
+.small-details h2{
+   font-weight: 500;
+}
+.small-details h4{
+   text-align: right;
+   font-size: 22px;
+}
+.line{
+   border: 0;
+   height: 1px;
+   background: #ccc;
+   width: 100%;
+   max-width: 800px;
+   margin: 20px 0 50px;
+}
+.check-form{
+   margin: 30px 0;
+   background: #fff;
+   box-shadow: 0 0 30px  rgba(0,0,0,0.3);
+   border-radius: 8px;
+   display: flex;
+
+   flex-wrap: wrap;
+   align-items: center;
+   padding: 10px 50px;
+
+}
+.check-form label{
+   display: block;
+}
+.check-form div{
+   padding: 10px;
+
+}
+.check-form input{
+   background: transparent;
+   border: 0;
+   outline: none;
+}
+.check-form button{
+   background: #ff9900;
+   border: 0; 
+   outline: none;
+   color: #fff;
+   padding: 18px;
+   width: 350px;
+   border-radius: 8px;
+   font-size: 16px;
+}
+.guest-field{
+   flex: 1;
+}
+.details-list{
+   list-style: none;
+   margin: 50px 0;
+}
+.details-list li{
+   margin-left: 50px;
+   font-size: 20px;
+   font-weight: 500px;
+   margin-bottom: 20px;
+   color: #555;
+   position: relative;
+}
+.details-list li span{
+   display: block;
+   font-size: 400;
+   font-size: 16px;
+}
+.details-list li i{
+   position: absolute;
+   top: 5px;
+   left: -40px;
+   color: #000;
+}
+.home-desc{
+   max-width: 700px;
+   margin-bottom: 50px;
+}
+map{
+   margin: 50px 0;
+}
+.map iframe{
+   width: 100%;
+   margin-bottom: 30px;
+}
+.map h3{
+   font-size: 26px;
+   font-weight: 500;
+   margin-bottom: 30px;
+}
+.map b{
+   display: block;
+   margin-bottom: 16px;
+}
+.host{
+   display: block;
+   align-items: center;
+}
+.host img{
+   width: 80px;
+   border-radius: 50%;
+   margin-right: 30px;
+}
+.host h2{
+   margin-bottom:  10px;
+   font-weight: 500;
+
+}
+.host i{
+   color: #ff9900;
+}
+.contact-info{
+   display: inline-block;
+   margin: 40px 0 40px 150px;
+   text-decoration: none;
+   color: #555;
+   padding: 15px 50px;
+   border: 1px solid #ff9900;
+   border-radius: 8px;
+}
+
+/* traveltide*/
+@media  only screen and (max-width: 768px) {
+   .house-details{
+      margin-top: 150px;
+   }
+   .row p{
+      margin-top: 10px;
+   }
+   .gallery{
+      grid-template-areas: 'first first' '. .' '. .';
+   }
+   .small-details h2{
+      font-size: 20px;
+      margin-top: 24px;
+   }
+   .small-details h4{
+      font-size: 18px;
+      text-align: left;
+      margin: 10px  0;
+   }
+   .check-form{
+      padding: 10px 30px;
+   }
+   .check-form div{
+      padding: 20px 0;
+      width: 100%;
+   }
+   .check-form input{
+      border-bottom: 1px solid #ccc;
+      width: 100%;
+      padding-bottom: 5px;
+   }
+   .check-form button{
+      font-size: 14px;
+      margin-top: 10px;
+      margin-bottom: 15px;
+      border-radius: 4px;
+   }
+   .host{
+      display: block;
+      line-height: 28px;
+   }
+   .contact-info{
+      align-items: center;
+   }
 }
