--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 .header{
    min-height: 100vh;
    width: 100%;
-   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0,  0, 0.5)),  url(assets/images/house-3\ \(1\)\ -\ Copy.jpeg);
+   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0,  0, 0.5)),  url(assets/images/Offers-0\ \(4\).jpeg);
    background-size: cover;
    position: center;
 
